@@ -1,5 +1,5 @@
 /* rsaref/rsaref.c */
-/* Copyright (C) 1995-1997 Eric Young (eay@cryptsoft.com)
+/* Copyright (C) 1995-1998 Eric Young (eay@cryptsoft.com)
  * All rights reserved.
  *
  * This package is an SSL implementation written
@@ -96,7 +96,7 @@ int RSA_ref_public_encrypt(int len, unsigned char *from,
 	unsigned char *to, RSA *rsa, int padding);
 int RSA_ref_public_decrypt(int len, unsigned char *from,
 	unsigned char *to, RSA *rsa, int padding);
-static int BN_ref_mod_exp(BIGNUM *r,BIGNUM *a,BIGNUM *p,BIGNUM *m, BN_CTX *ctx);
+static int BN_ref_mod_exp(BIGNUM *r,BIGNUM *a,BIGNUM *p,BIGNUM *m, BN_CTX *ctx, BN_MONT_CTX *m_ctx);
 static int RSA_ref_mod_exp(BIGNUM *r0, BIGNUM *I, RSA *rsa);
 #else
 
@@ -126,6 +126,8 @@ static RSA_METHOD rsa_pkcs1_ref_meth={
 	BN_ref_mod_exp,
 	NULL,
 	NULL,
+	0,
+	NULL,
 	};
 
 RSA_METHOD *RSA_PKCS1_RSAref()
@@ -142,9 +144,10 @@ RSA *rsa;
 	return(0);
 	}
 
-static int BN_ref_mod_exp(r,a,p,m,ctx)
+static int BN_ref_mod_exp(r,a,p,m,ctx,m_ctx)
 BIGNUM *r,*a,*p,*m;
 BN_CTX *ctx;
+BN_MONT_CTX *m_ctx;
 	{
 	RSAREFerr(RSAREF_F_BN_REF_MOD_EXP,ERR_R_SHOULD_NOT_HAVE_BEEN_CALLED);
 	return(0);
