@@ -5,6 +5,10 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Fix the dummy function BN_ref_mod_exp() in rsaref.c to have the correct
+     parameters. This was causing a warning which killed off the Win32 compile.
+     [Steve Henson]
+
   *) Remove C++ style comments from crypto/bn/bn_local.h.
      [Neil Costigan <neil.costigan@celocom.com>]
 
